# lecture-docs

./: .env.example  .gitignore  AUTH_IMPLEMENTATION_SUMMARY.md  README.md  RUN_LOCALLY.md  SETUP.md  SUPABASE_AUTH_SETUP.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  Procfile  alembic.ini  pyproject.toml  railway.json  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  health.py  projects.py  search.py  upload.py
backend/app/core/: __init__.py  config.py  logging_config.py  redis_client.py  security.py
backend/app/db/: __init__.py  base.py  database.py
backend/app/prompts/: __init__.py  readme_prompt.py
backend/app/schemas/: __init__.py  chat.py  project.py  upload.py
backend/app/services/: chunker_service.py  embedding_service.py  job_queue.py  llm_service.py  ocr_service.py  parser_service.py  rag_service.py  stt_service.py  vectorstore_service.py
backend/app/utils/: file_utils.py  slug_generator.py  youtube_utils.py
backend/tests/: test_chunker.py  test_integration.py  test_slug.py
frontend/: Dockerfile  middleware.ts  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  FileTree.tsx  MarkdownViewer.tsx  Navbar.tsx  ProjectCard.tsx  ProjectList.tsx  ThemeToggle.tsx  UploadZone.tsx
frontend/components/ui/: button.tsx  dropdown-menu.tsx  (+2 more)
frontend/lib/: api.ts  clerk.ts  supabase.ts
prisma/: schema.prisma
(+4 files in other folders)
