[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "lecture-docs-backend"
version = "1.0.0"
description = "Backend API for LectureDocs"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "chromadb>=0.4.22",
    # ... (list key deps)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "black>=23.12.1",
    "flake8>=7.0.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
